# sickd

./: CMakeLists.txt  HACKING.md  README.md
include/: libsickd.h
libsickd/: sick_shmem_poll.c
qsick/: CMakeLists.txt  qsick.cpp  qsick.h
src/: crc_sick.c  events.c  main.c  pls_201.c  shared_mem.c  sickd.h
tests/: sick-shmgen.c
